bugfix for the interactive demo + tweaks to alignment of tribebar

--- a/ghpages/assets/styles/global.css
+++ b/ghpages/assets/styles/global.css
@@ -47,79 +47,3 @@ body {
   width: 1000px;
   height: 1400px;
 }
-
-img {
-  display: block;
-  width: 100%;
-}
-
-.card__artwork {
-  position: absolute;
-  width: 64%;
-  right: 15%;
-  top: 12%;
-}
-
-.card__baseLayer,
-.card__manaLayer,
-.card__rarityLayer,
-.card__wreathLayer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.card__lockIconLayer {
-  position: absolute;
-  left: 54%;
-  top: 2%;
-  width: 18%;
-  transform: translate(-50%, 15%);
-}
-
-.card__manaText {
-  position: absolute;
-  color: white;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-}
-
-.card__nameText {
-  position: absolute;
-  white-space: nowrap;
-  color: white;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-}
-
-.card__descriptionText {
-  position: absolute;
-  text-align: center;
-  color: black;
-  display: flex;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.card__descriptionText__inner {
-  margin: auto;
-}
-
-.card__attackText {
-  position: absolute;
-  color: white;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-}
-
-.card__healthText {
-  position: absolute;
-  color: white;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-}
